# dashboard_racing_esp32p4

./: .gitignore  README.md  partitions.csv
components/ui/: CMakeLists.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.c
components/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_slider1.c  ui_comp_slider1.h
components/ui/fonts/: ui_font_RapBV.c  ui_font_VerdanaBoldItalic30.c  ui_font_VerdanaBoldItalic35.c  ui_font_VerdanaBoldItalic40.c  ui_font_VerdanaBoldItalic45.c  ui_font_VerdanaBoldItalic50.c  ui_font_VerdanaBoldItalic55.c  ui_font_VerdanaBoldItalic60.c  ui_font_VerdanaBoldItalic65.c  ui_font_VerdanaBoldItalic75.c  ui_font_VerdanaBoldItalic80.c  ui_font_VerdanaBoldItalic85.c  ui_font_VerdanaBoldItalic90.c
components/ui/images/: ui_img_1361701724.c  ui_img_bouton_bleu_png.c  ui_img_bouton_cyan_png.c  ui_img_bouton_noir_png.c  ui_img_bouton_orange_png.c  ui_img_bouton_rouge_png.c  ui_img_bouton_vert_png.c  ui_img_btn_menu_png.c  ui_img_config_png.c  ui_img_display_png.c  ui_img_droitecurseur_9000_png.c  ui_img_droitefond_9000_png.c  ui_img_gauchecurseur_9000_png.c  ui_img_gauchefond_9000_png.c  ui_img_led_bleue_png.c  ui_img_led_cyan_png.c  ui_img_led_noire_png.c  ui_img_led_orange_png.c  ui_img_led_rouge_png.c  ui_img_led_verte_png.c  ui_img_leds_png.c  ui_img_realtime_png.c
components/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_ScreenDisplayBV.c  ui_ScreenDisplayBV.h  ui_ScreenDisplayECU.c  ui_ScreenDisplayECU.h  ui_ScreenDisplayRX.c  ui_ScreenDisplayRX.h  ui_ScreenLeds.c  ui_ScreenLeds.h  ui_ScreenLogo.c  ui_ScreenLogo.h  ui_ScreenMenu.c  ui_ScreenMenu.h  ui_ScreenRealTime.c  ui_screenconfig.c  ui_screenconfig.h
components/ui_manager/: CMakeLists.txt  filelist.txt  project.info  ui_manager.c  ui_manager.h  ui_manager_events.c  ui_manager_events.h  ui_manager_helpers.c  ui_manager_helpers.h  ui_manager_slider.c  ui_manager_theme_manager.c  ui_manager_theme_manager.h
components/ui_manager/components/: ui_comp.c  ui_comp_hook.c  ui_comp_slider1.c  ui_comp_slider1.h  ui_manager_comp.h  ui_manager_comp_hook.h
components/ui_manager/fonts/: ui_font_RapBV.c  ui_font_VerdanaBoldItalic30.c  ui_font_VerdanaBoldItalic35.c  ui_font_VerdanaBoldItalic40.c  ui_font_VerdanaBoldItalic45.c  ui_font_VerdanaBoldItalic50.c  (+7 more)
main/: CMakeLists.txt  main.c  sd_card.c  sd_card.h  slider.c  slider.h
(+49 files in other folders)
